[gd_scene load_steps=8 format=3 uid="uid://mxld6511wteq"]

[ext_resource type="Script" path="res://ui/title_menu.gd" id="1_v6o22"]
[ext_resource type="Texture2D" uid="uid://dyp5kxflm8wai" path="res://assets/flame_purple.png" id="2_lsrnk"]
[ext_resource type="PackedScene" uid="uid://c4su6mqogonri" path="res://ui/volume_slider.tscn" id="3_mfxdw"]
[ext_resource type="Script" path="res://ui/volume_slider.gd" id="4_q8hmo"]

[sub_resource type="LabelSettings" id="LabelSettings_iw5mk"]
font_size = 100

[sub_resource type="Animation" id="Animation_06uqr"]
resource_name = "burning"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fire:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4nvl6"]
_data = {
"burning": SubResource("Animation_06uqr")
}

[node name="Menu" type="Control"]
z_index = 1000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v6o22")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 900.0
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_top = 100.0
offset_right = 1600.0
offset_bottom = 218.0
text = "SURRENDER TO MADNESS"
label_settings = SubResource("LabelSettings_iw5mk")
horizontal_alignment = 1

[node name="Fire" type="Sprite2D" parent="."]
position = Vector2(1036, 474)
scale = Vector2(10, 10)
texture = ExtResource("2_lsrnk")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4nvl6")
}

[node name="OptionsPanel" type="Control" parent="."]
anchors_preset = 0
offset_left = 150.0
offset_top = 354.0
offset_right = 654.0
offset_bottom = 736.0

[node name="Main" type="VBoxContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="OptionsPanel/Main"]
layout_mode = 2
text = "START"
alignment = 0

[node name="QuitButton" type="Button" parent="OptionsPanel/Main"]
layout_mode = 2
text = "QUIT"
alignment = 0

[node name="EffectsLabel" type="Label" parent="OptionsPanel/Main"]
layout_mode = 2
text = "EFFECTS"

[node name="EffectsSlider" parent="OptionsPanel/Main" instance=ExtResource("3_mfxdw")]
layout_mode = 2
script = ExtResource("4_q8hmo")
audio_bus_name = "Effects"

[node name="MusicLabel" type="Label" parent="OptionsPanel/Main"]
layout_mode = 2
text = "MUSIC"

[node name="MusicSlider" parent="OptionsPanel/Main" instance=ExtResource("3_mfxdw")]
layout_mode = 2
script = ExtResource("4_q8hmo")
audio_bus_name = "Music"

[node name="Bosses" type="VBoxContainer" parent="OptionsPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="OptionsPanel/Bosses"]
layout_mode = 2
text = "Back"
alignment = 0
